# Parallel-Programming

mpi-coursework-acse-zl1021-main/HPCFiles/: CMakeLists.txt  README.md  tree.txt
mpi-coursework-acse-zl1021-main/HPCFiles/build10/: Makefile
mpi-coursework-acse-zl1021-main/HPCFiles/build10/object_files/: 1000-1.o5191426  1000-1.o5198223  1000-128.o5191445  1000-128.o5198215  1000-16.o5191438  1000-16.o5198218  1000-2.o5191428  1000-2.o5198222  1000-256.o5191447  1000-32.o5191440  1000-32.o5191558  1000-32.o5198217  1000-4.o5191431  1000-4.o5198221  1000-64.o5191442  1000-64.o5198216  1000-8.o5191435  1000-8.o5198220
mpi-coursework-acse-zl1021-main/HPCFiles/build10/scripts/: script1000-1.pbs  script1000-128.pbs  script1000-16.pbs  script1000-2.pbs  script1000-256.pbs  script1000-32.pbs  script1000-4.pbs  script1000-64.pbs  script1000-8.pbs
mpi-coursework-acse-zl1021-main/HPCFiles/build3/: Makefile
mpi-coursework-acse-zl1021-main/HPCFiles/build3/object_files/: 300-1.o5185517  300-1.o5187207  300-1.o5187270  300-1.o5187659  300-1.o5191485  300-1.o5198186  300-128.o5186230  300-128.o5191492  300-128.o5192793  300-128.o5198174  300-128.o5198874  300-16.o5185509  300-16.o5191489  300-16.o5198178  300-2.o5185516  300-2.o5191486  300-2.o5198185  300-256.o5186231  300-256.o5191493  300-256.o5192796  300-256.o5193153  300-256.o5198175  300-32.o5185507  300-32.o5191490  300-32.o5198177  300-4.o5185514  300-4.o5191487  300-4.o5198184  300-512.o5187249  300-64.o5185506  300-64.o5191491  300-64.o5191642  (+4 more)
mpi-coursework-acse-zl1021-main/HPCFiles/build5/: Makefile
(+71 files in other folders)
